<resources>
    <string name="app_name">Emart</string>
    <string name="text_title_app"><font size='34'>E</font><font size='24'>mart</font></string>
    <string name="text_subtitle_splash">Help you manage the store</string>
    <string name="text_subtitle_sign_in">Please SignIn to continue</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_confirmpassword">Confirm Password</string>
    <string name="text_hint_phone">Phone</string>
    <string name="OwnerName">Owner Name</string>
    <string name="OwnerPhone">Owner Phone</string>
    <string name="OrderDetail">All Orders</string>
    <string name="OrderDetails">Owner Details</string>
    <string name="Voucher">Voucher</string>
    <string name="text_hint_address">Address</string>
    <string name="text_btn_forgot_password">Forgot password?</string>
    <string name="text_btn_sign_in">Sign In</string>
    <string name="text_or">OR</string>
    <string name="text_btn_google">Google</string>
    <string name="text_btn_facebook">Facebook</string>
    <string name="text_to_sign_up">Don\'t have an account? <b><font color='#03A9F4'>SIGN UP</font></b></string>
    <string name="text_subtitle_sign_up_customer">Please SignUp for a new customer</string>
    <string name="text_subtitle_sign_up_mart">Please SignUp for a new mart</string>
    <string name="text_hint_name">Name</string>
    <string name="text_privacy_policy">I agree with <b><font color='#03A9F4'>Privacy</font></b> and <b><font color='#03A9F4'>Policy</font></b></string>
    <string name="text_to_sign_in">Already have an account? <b><font color='#03A9F4'>SIGN IN</font></b></string>
    <string name="text_btn_sign_up">Sign Up</string>

    <string name="text_radio_customer">Customer</string>
    <string name="text_radio_vendor">Mart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_location_picker">Show Location Picker</string>
    <string name="api_key">AIzaSyC8ywB6LrBgrCheRG7AjnSdITGlx-ftXt8</string>
    <string name="reviews">Reviews:</string>
    <string name="date">DATE:</string>
    <string name="mart_name">Mart Name:</string>
    <string name="customer_name">Customer Name:</string>
    <string name="complaints">Complaints:</string>

    <string name="default_notification_channel_id">1234</string>
    <string name="channel_name">Android</string>
</resources>
