<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5sp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                android:layout_marginTop="5sp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryText"
                    android:hint="@string/text_hint_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryText"
                    android:hint="@string/text_hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryText"
                    android:hint="@string/text_hint_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRetypePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/RetypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryText"
                    android:hint="@string/text_hint_confirmpassword"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryText"
                    android:hint="@string/text_hint_phone"
                    android:inputType="phone"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="385dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAddress"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_layout"
                    android:layout_marginEnd="@dimen/margin_layout"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimaryText"
                        android:gravity="left"
                        android:hint="@string/text_hint_address"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLines="4"
                        android:textColor="@color/colorPrimaryText"
                        android:textColorHint="@color/colorPrimaryText"
                        android:textSize="@dimen/text_body_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/imgbtnlocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:layout_marginTop="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_my_location_black_24dp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOwnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titOwnerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryText"
                    android:hint="@string/OwnerName"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOwnerPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titOwnerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryText"
                    android:hint="@string/OwnerPhone"
                    android:inputType="phone"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilOrderDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titOrderDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryText"
                    android:gravity="left"
                    android:hint="@string/OrderDetails"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLines="4"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilVoucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                android:visibility="gone"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titVoucher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryText"
                    android:hint="@string/Voucher"
                    android:inputType="textPersonName"
                    android:text="Not Available"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorPrimaryText"
                    android:textSize="@dimen/text_body_size" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginTop="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                android:background="@color/colorAccent"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/text_btn_sign_up"
                android:textColor="@color/colorTextORIcon"
                android:textSize="@dimen/text_btn_size" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_marginTop="@dimen/margin_layout"
                android:layout_marginEnd="@dimen/margin_layout"
                android:background="@color/transparent"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/text_to_sign_in"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_btn_size" />
        </LinearLayout>
    </ScrollView>







</LinearLayout>